--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,9 +25,10 @@
         android:text="@string/roll_label" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/countUp_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:text="@string/count_label" />
 
 </LinearLayout>
